--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -133,7 +133,7 @@ jobs:
           "${GITHUB_WORKSPACE}/hack/ubuntu-podman-update.sh"
 
       - name: Acceptance test
-        run: make acceptance
+        run: make acceptance-steps
 
       - name: Upload coverage report
         uses: codecov/codecov-action@13ce06bfc6bbe3ecf90edbbf1bc32fe5978ca1d3 # v5.3.1
